created all the notebooks

--- a/PROJECTS/skill_indemand.ipynb
+++ b/PROJECTS/skill_indemand.ipynb
@@ -8,10 +8,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "5205121d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\felix\\anaconda3\\envs\\python_cource\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "#importing libraries\n",
     "import pandas as pd\n",
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "3a1348bb",
    "metadata": {},
    "outputs": [],
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "3f141c7c",
    "metadata": {},
    "outputs": [],
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "f27f6100",
    "metadata": {},
    "outputs": [
@@ -170,7 +179,7 @@
        "[992 rows x 3 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "4b39b55d",
    "metadata": {},
    "outputs": [
@@ -192,7 +201,7 @@
        "['Data Engineer', 'Data Scientist', 'Senior Data Scientist']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "id": "83183590",
    "metadata": {},
    "outputs": [
@@ -213,17 +222,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\felix\\AppData\\Local\\Temp\\ipykernel_10872\\1418780408.py:6: FutureWarning: \n",
+      "C:\\Users\\felix\\AppData\\Local\\Temp\\ipykernel_936\\1888867935.py:6: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
       "  sns.barplot(data=df_plot,y='job_skills',x='skill_count',ax=ax[i],palette='dark:b_r')\n",
-      "C:\\Users\\felix\\AppData\\Local\\Temp\\ipykernel_10872\\1418780408.py:6: FutureWarning: \n",
+      "C:\\Users\\felix\\AppData\\Local\\Temp\\ipykernel_936\\1888867935.py:6: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
       "  sns.barplot(data=df_plot,y='job_skills',x='skill_count',ax=ax[i],palette='dark:b_r')\n",
-      "C:\\Users\\felix\\AppData\\Local\\Temp\\ipykernel_10872\\1418780408.py:6: FutureWarning: \n",
+      "C:\\Users\\felix\\AppData\\Local\\Temp\\ipykernel_936\\1888867935.py:6: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -256,12 +265,13 @@
     "    if i!=2:\n",
     "        ax[i].set_xticks([])\n",
     "plt.suptitle('Top 5 Skills in Demand for the Top 3 Job Titles in the United States')\n",
-    "plt.tight_layout()\n"
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "07e6d816",
    "metadata": {},
    "outputs": [],
@@ -271,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "624b3b5e",
    "metadata": {},
    "outputs": [
@@ -427,7 +437,7 @@
        "[992 rows x 5 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "id": "e47a3383",
    "metadata": {},
    "outputs": [
@@ -473,6 +483,7 @@
     "        ax[i].set_xticks([])\n",
     "plt.suptitle('Top 5 Skills in Demand for the Top 3 Job Titles in the United States')\n",
     "plt.tight_layout(h_pad=0.5)\n",
+    "plt.show()\n",
     "\n"
    ]
   },
