--- a/PROJECTS/skill_indemand.ipynb
+++ b/PROJECTS/skill_indemand.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "id": "96923d41",
    "metadata": {},
-   "source": []
+   "source": [
+    "# What are the most demanded skills for the top 3 most popular data roles?\n",
+    "* Methology\n",
+    "1. Clean-up skill column\n",
+    "2. Calculate skill count based on job_title_short\n",
+    "3. Calculate skill percentage\n",
+    "4. Plot final findings"
+   ]
   },
   {
    "cell_type": "code",
